Repair project name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "msproadin-react",
+  "name": "msproadmin-react",
   "version": "1.0.0",
   "private": true,
   "description": "A frontend management system form MsProAdmin",
